Api 0.3: Change filter-parameter serialization
Using a generic map at SearchParams does not work like expected with
Spring. So filters were extracted into separate parameters map.
All the according usage of these filters had to be adjusted.
