# open-commerce-search-api/src/main/java/de/cxp/ocs/api/searcher/SearchService.java
@@ -1,6 +1,6 @@
 package de.cxp.ocs.api.searcher;
 
-import java.io.IOException;
+import java.util.Map;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -14,6 +14,7 @@ import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.enums.ParameterStyle;
 import io.swagger.v3.oas.annotations.enums.SecuritySchemeType;
 import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
@@ -36,15 +37,43 @@ public interface SearchService {
 	 * 
 	 * @param tenant
 	 * @param searchQuery
-	 * @param parameters
+	 * @param filters
+	 *        Any other parameters are used as filters. They are validated
+	 *        according to the actual data and configuration.
+	 * 
+	 *        Each filter can have multiple values, separated by comma. Commas
+	 *        inside the values have to be double-URL encoded.
+	 *        Depending on the configured backend type these values are used
+	 *        differently.
+	 * 
+	 *        Examples:
+	 *        <ul>
+	 *        <li>
+	 *        brand=adidas
+	 *        </li>
+	 *        <li>
+	 *        brand=adidas,nike (=> products from adidas OR nike are shown)
+	 *        </li>
+	 *        <li>
+	 *        category=men,shoes,sneaker (=> if category would be configured as
+	 *        path, these values are used for hierarchical filtering)
+	 *        </li>
+	 *        <li>
+	 *        price=10,99.99 (=> if price is configured as numeric field, these
+	 *        values are used as range filters)
+	 *        </li>
+	 *        <li>
+	 *        color=red,black (=> if that field is configured to be used for
+	 *        "exclusive filtering" only products would be shown that are
+	 *        available in red AND black)
+	 *        </li>
+	 *        <li>
+	 *        optional for the future also negations could be supported, e.g.
+	 *        color=red,!black
+	 *        </li>
+	 * 
 	 * @return
-	 * @throws IOException
-	 */
-	/**
-	 * @param tenant
-	 * @param searchQuery
-	 * @return
-	 * @throws IOException
+	 * @throws Exception 
 	 */
 	@GET
 	@Path("search/{tenant}")
@@ -54,15 +83,22 @@ public interface SearchService {
 					+ " The tenant should exist at the service and linked to a certain index in the backend."
 					+ " Different tenants may use the same index.",
 			responses = {
-					@ApiResponse(responseCode = "403", description = "tenant can't be accessed or does not exist"),
 					@ApiResponse(
 							responseCode = "200",
 							description = "successful found results",
 							content = @Content(schema = @Schema(ref = "SearchResult"))),
 					@ApiResponse(
-							responseCode = "404",
+							responseCode = "204",
 							description = "Optional response code that represents 'no result'",
-							content = @Content(schema = @Schema(ref = "SearchResult")))
+							content = @Content(schema = @Schema(ref = "SearchResult"))),
+					@ApiResponse(
+							responseCode = "403", 
+							description = "tenant can't be accessed or does not exist",
+							content = @Content(mediaType = "text/plain")),
+					@ApiResponse(
+							responseCode = "404",
+							description = "response code if tenant is unknown or index does not exist",
+							content = @Content(mediaType = "text/plain"))
 			})
 	public SearchResult search(
 			@Parameter(
@@ -76,8 +112,40 @@ public interface SearchService {
 					explode = Explode.TRUE,
 					style = ParameterStyle.FORM,
 					description = "the query that describes the wished result",
-					required = true) SearchQuery searchQuery)
-			throws IOException;
+					required = true) SearchQuery searchQuery,
+			@Parameter(
+					in = ParameterIn.QUERY,
+					name = "filters",
+					description = "Any other parameters are used as filters. They are validated according to the actual data and configuration. " +
+							"Each filter can have multiple values, separated by comma. Commas inside the values have to be double-URL encoded. " +
+							"Depending on the configured backend type these values are used differently.",
+					examples = {
+							@ExampleObject(
+									name = "simple filter", 
+									value = "brand=adidas",
+									description = "Filters are simple parameters with the field-names as parameter and the filter values as comma separated parameter values."),
+							@ExampleObject(
+									name = "joined filter", 
+									value = "brand=adidas,nike", 
+									description = "products from adidas OR nike are shown"),
+							@ExampleObject(
+									name = "hierarchical filter",
+									value = "category=men,shoes,sneaker",
+									description = "if category would be configured as path, these values are used for hierarchical filtering"),
+							@ExampleObject(
+									name = "numeric range filter",
+									value = "price=10,99.90",
+									description = "if price is configured as numeric field, these values are used as range filters"),
+							@ExampleObject(
+									name = "joined filter 2",
+									value = "color=red,black",
+									description = "The way filters are interpreted depends on the backend configuration. "
+											+ "If that field is configured to be used for \"exclusive filtering\" only products would be shown that are available in red AND black")
+					},
+					explode = Explode.TRUE,
+					style = ParameterStyle.FORM,
+					required = false) Map<String, String> filters)
+			throws Exception;
 
 	@GET
 	@Path("tenants")
