# open-commerce-search-api/src/main/java/de/cxp/ocs/model/result/SearchResultSlice.java
@@ -2,7 +2,6 @@ package de.cxp.ocs.model.result;
 
 import java.util.List;
 
-import de.cxp.ocs.model.params.SearchQuery;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -19,7 +18,7 @@ public class SearchResultSlice {
 	 */
 	@Schema(description = "An identifier for that result slice. Can be used to differentiate different slices. Values depend on the implementation.")
 	public String label;
-	
+
 	/**
 	 * the absolute number of matches in this result.
 	 */
@@ -31,7 +30,7 @@ public class SearchResultSlice {
 	 */
 	@Schema(description = "the offset value to use to get the next result batch")
 	public long nextOffset;
-	
+
 	/**
 	 * URL conform query parameters, that has to be used to get the next bunch
 	 * of results. Is null if there are no more results.
@@ -42,12 +41,13 @@ public class SearchResultSlice {
 	public String nextLink;
 
 	/**
-	 * The query that represents exact that passed slice. If send to the engine
-	 * again, that slice should be returned as main result.
+	 * The parameters that lead to exact that passed slice. If send to the
+	 * engine again, that slice should be returned as main result.
 	 */
 	@Schema(
+			format = "URI",
 			description = "The query that represents exact that passed slice. If send to the engine again, that slice should be returned as main result.")
-	public SearchQuery resultQuery;
+	public String resultLink;
 
 	/**
 	 * the list of actual hits for that result view.
@@ -61,5 +61,5 @@ public class SearchResultSlice {
 	 */
 	@Schema(description = "If facets are part of this slice, they are placed here. By default only one slice SHOULD contain facets.")
 	public List<Facet> facets;
-	
+
 }
