# open-commerce-search-api/src/main/resources/openapi.yaml
@@ -10,30 +10,24 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: "0.2"
 paths:
-  /indexer-api/v1/full/add:
+  /indexer-api/v1/full/done:
     post:
       tags:
       - indexer
-      description: Add one or more documents to a running import session.
-      operationId: add
+      description: Finishes the import, flushing the new index and (in case there
+        is already an index with the initialized name) replacing the old one.
+      operationId: done
       requestBody:
-        description: Data that contains the import session reference and one or more
-          documents that should be added to that session.
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/BulkImportData'
+              $ref: '#/components/schemas/ImportSession'
         required: true
       responses:
         "200":
-          description: documents successfully added
-          content:
-            '*/*':
-              schema:
-                type: string
-                description: Amount of documents successfuly added
+          description: successfully done
         "400":
-          description: import session is invalid
+          description: indexation was already confirmed or import session is invalid
       security:
       - basic-auth: []
       servers:
@@ -86,24 +80,30 @@ paths:
           facets (e.g. book authors) but not for faceting the content documents (e.g.
           blog post authors).
         variables: {}
-  /indexer-api/v1/full/done:
+  /indexer-api/v1/full/add:
     post:
       tags:
       - indexer
-      description: Finishes the import, flushing the new index and (in case there
-        is already an index with the initialized name) replacing the old one.
-      operationId: done
+      description: Add one or more documents to a running import session.
+      operationId: add
       requestBody:
+        description: Data that contains the import session reference and one or more
+          documents that should be added to that session.
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/ImportSession'
+              $ref: '#/components/schemas/BulkImportData'
         required: true
       responses:
         "200":
-          description: successfully done
+          description: documents successfully added
+          content:
+            '*/*':
+              schema:
+                type: string
+                description: Amount of documents successfuly added
         "400":
-          description: indexation was already confirmed or import session is invalid
+          description: import session is invalid
       security:
       - basic-auth: []
       servers:
@@ -280,6 +280,39 @@ paths:
         style: form
         schema:
           $ref: '#/components/schemas/SearchQuery'
+      - name: filters
+        in: query
+        description: Any other parameters are used as filters. They are validated
+          according to the actual data and configuration. Each filter can have multiple
+          values, separated by comma. Commas inside the values have to be double-URL
+          encoded. Depending on the configured backend type these values are used
+          differently.
+        style: form
+        schema:
+          type: object
+          additionalProperties:
+            type: string
+        examples:
+          joined filter 2:
+            description: The way filters are interpreted depends on the backend configuration.
+              If that field is configured to be used for "exclusive filtering" only
+              products would be shown that are available in red AND black
+            value: color=red,black
+          simple filter:
+            description: Filters are simple parameters with the field-names as parameter
+              and the filter values as comma separated parameter values.
+            value: brand=adidas
+          joined filter:
+            description: products from adidas OR nike are shown
+            value: brand=adidas,nike
+          hierarchical filter:
+            description: if category would be configured as path, these values are
+              used for hierarchical filtering
+            value: category=men,shoes,sneaker
+          numeric range filter:
+            description: if price is configured as numeric field, these values are
+              used as range filters
+            value: price=10,99.90
       responses:
         "403":
           description: tenant can't be accessed or does not exist
@@ -289,12 +322,16 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchResult'
-        "404":
+        "204":
           description: Optional response code that represents 'no result'
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/SearchResult'
+        "404":
+          description: response code if tenant is unknown or index does not exist
+          content:
+            text/plain: {}
       security:
       - basic-auth: []
       servers:
@@ -315,6 +352,17 @@ paths:
         variables: {}
 components:
   schemas:
+    ImportSession:
+      required:
+      - finalIndexName
+      - temporaryIndexName
+      type: object
+      properties:
+        finalIndexName:
+          type: string
+        temporaryIndexName:
+          type: string
+      readOnly: true
     Attribute:
       required:
       - label
@@ -414,17 +462,6 @@ components:
               $ref: '#/components/schemas/Category'
       description: A data record that contains any data relevant for search. The single
         field types and conversions are part of the according service configuration.
-    ImportSession:
-      required:
-      - finalIndexName
-      - temporaryIndexName
-      type: object
-      properties:
-        finalIndexName:
-          type: string
-        temporaryIndexName:
-          type: string
-      readOnly: true
     Product:
       type: object
       description: Main product containing the data that is common for all variants.
@@ -530,25 +567,6 @@ components:
           items:
             type: string
       description: the list of actual hits for that result view.
-    SearchQuery:
-      type: object
-      properties:
-        userQuery:
-          type: string
-        filters:
-          type: object
-          additionalProperties:
-            type: string
-        sort:
-          type: string
-        limit:
-          type: integer
-          format: int32
-        offset:
-          type: integer
-          format: int32
-        withFacets:
-          type: boolean
     SearchResult:
       type: object
       properties:
@@ -556,8 +574,11 @@ components:
           type: integer
           description: amount of time the internal search needed to compute that result
           format: int64
-        inputQuery:
-          $ref: '#/components/schemas/SearchQuery'
+        inputURI:
+          type: string
+          description: The URI that was used to get that result view. May be used
+            to generate breadcrumbs.
+          format: URI
         slices:
           type: array
           description: The result may consist of several slices, for example if a
@@ -600,8 +621,11 @@ components:
           description: URL conform query parameters, that has to be used to get the
             next bunch of results. Is null if there are no more results.
           format: URI
-        resultQuery:
-          $ref: '#/components/schemas/SearchQuery'
+        resultLink:
+          type: string
+          description: The query that represents exact that passed slice. If send
+            to the engine again, that slice should be returned as main result.
+          format: URI
         hits:
           type: array
           description: the list of actual hits for that result view.
@@ -636,6 +660,24 @@ components:
         link:
           type: string
           format: URI
+    SearchQuery:
+      type: object
+      properties:
+        q:
+          type: string
+        sort:
+          type: string
+        limit:
+          minimum: 1
+          type: integer
+          format: int32
+        offset:
+          type: integer
+          format: int32
+        withFacets:
+          type: boolean
+        userQuery:
+          $ref: '#/components/schemas/SearchQuery'
   securitySchemes:
     basic-auth:
       type: http
